# rwkv7-pure-pytorch-demo

./: .gitignore  Cargo.toml  README.md  rwkv_v7_demo.py  rwkv_v7_demo_fast.py  rwkv_v7_demo_rnn.py
_docs/: 项目构建过程.md
exps/: exp1.1_minicpm-o-2-6.py  exp1_qwen2.5-vl.py  exp2.2_fla-hub_rwkv7.py  exp2_fla_arwkv.py  requirements.txt
frontend/: package.json
src/: chat.rs  main.rs  start.sh
